// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListSorting renders  component will set state on receiving new props 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-5"
          value={5}
        >
          5
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PublicationsListSorting renders  component will set state on receiving new props 2`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="Publication date"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="test"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={5}
      >
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-5"
          value={5}
        >
          5
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PublicationsListSorting renders  component with empty paging data 1`] = `
<span
  className="publicationsListSorting empty"
/>
`;

exports[`PublicationsListSorting renders  component with export dropdown for admin or author 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <Hidden
    xsDown={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={3}
      sm={6}
    >
      <ExportPublications
        disabled={false}
        onChange={[Function]}
      />
    </WithStyles(ForwardRef(Grid))>
  </Hidden>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PublicationsListSorting renders  component with export dropdown hidden 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PublicationsListSorting renders  component with non-empty paging data 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
